# behind-the-ballot

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json  wrangler.jsonc
.github/: dependabot.yml
design-system/: LOGO_BRIEF.md  README.md
docs/: 01_PRODUCT_VISION.md  02_ARCHITECTURE.md  03_DATA_SOURCES.md  04_DEFINITION_OF_DONE.md  ACCOUNTS.md  BACKLOG.md  SETUP_SECRETS.md  VERSIONING.md  (+1 more)
pipeline/: pyproject.toml
pipeline/btb_pipeline/: __init__.py  aggregate.py  backtest.py  baseline.py  budget.py  cli.py  connector.py  core.py  demographics.py  export_web.py  fairness.py  finance_aggregates.py  forecast.py  generate_races.py  geometry.py  integrity.py  ml_challenger.py  montecarlo.py  notify.py  race_model.py  urbanization.py
pipeline/btb_pipeline/sources/: acs.py  committee_link.py  fec.py  medsl.py  members.py  polls.py  pollster_ratings.py  rollcall.py  sample.py  sponsorship.py  tiger.py  voteview.py
pipeline/tests/: test_acs.py  test_aggregate.py  test_backtest.py  test_baseline.py  test_budget.py  test_cli.py  test_committee_link.py  test_connector.py  test_core.py  test_demographics.py  test_export_forecast.py  test_export_web.py  test_fairness.py  test_fec.py  test_finance_aggregates.py  test_forecast.py  test_generate_races.py  test_geometry.py  test_integrity.py  test_medsl.py  test_members.py  test_ml_challenger.py  test_montecarlo.py  test_notify.py  test_polls.py  test_pollster_ratings.py  test_race_model.py  test_rollcall.py  test_sponsorship.py  test_tiger.py  test_urbanization.py  test_voteview.py
(+234 files in other folders)
