[project]
name = "btb-pipeline"
version = "0.0.1"
description = "Behind the Ballot ETL — Python data pipeline [R1c]"
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2",
  "requests>=2.32",
  "pydantic>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["btb_pipeline"]

[dependency-groups]
dev = ["pytest>=8.3", "ruff>=0.7"]

[tool.ruff]
line-length = 100

# geopandas/shapely added in v1.1.2-geo-tiles (geo units only) [L6a].
# Reproducible env via uv lock [R12a].
